# RSE_physics

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
notebooks/: demo.ipynb
search/: search_index.json
src/RSE_physics/: __init__.py  core.py
tests/: test_core.py
